Resolving langchain_pinecone version issue in deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pandas==2.2.3
 pinecone==5.4.2
-langchain_pinecone
+langchain_pinecone==0.2.0
 langchain-huggingface==0.1.2
 langchain-community==0.3.13
 langchain-openai==0.2.14
